# tic_tac_toe

./: CMakeLists.txt  CMakeLists.txt.user.b93125a  CMakeLists.txt.user.dac5d02  CMakeLists.txt.user.dd4de04  GameManager.cpp  GameManager.h  README.md  Register.h  ai_or_2.cpp  ai_or_2.h  ai_or_2.ui  dialog.cpp  dialog.h  dialog.ui  easy_ai.cpp  easy_ai.h  easy_ai.ui  easy_or_hard.ui  easyhard.cpp  easyhard.h  easyhard.ui  gameAIcpp  game_history.cpp  game_history.h  game_history.ui  game_or_history.cpp  game_or_history.h  game_or_history.ui  gameai.cpp  gameai.h  gameai.ui  gamewindow1.cpp  gamewindow1.h  gamewindow1.ui  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register_dialog.cpp  (+10 more)
